--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ quarkus.hibernate-orm.database.generation=update
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000
+
+quarkus.native.native-image-xmx=6g
